<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/my_background_drawable"
    android:orientation="vertical"
    tools:context=".ui.activities.LoginActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@id/bottomlayout"
            android:gravity="center_horizontal"
            android:orientation="vertical">


            <Switch
                android:id="@+id/gender_switch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:fontFamily="cursive"
                android:text="I am"
                android:textColor="@color/white"
                android:textSize="40dp" />

            <!--        Insert image circular-->
            <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
                android:id="@+id/profile_img"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_marginTop="16dp"
                android:src="@drawable/spidermanmcu"
                app:civ_border_color="#FF000000"
                app:civ_border_width="2dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <!--        edit text with white solid background-->
            <EditText
                android:id="@+id/editTextNickName"
                android:layout_width="300dp"
                android:layout_height="45dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/login_border_button"
                android:hint="  Nickname"
                android:inputType="text"
                android:text="Spiderman"
                android:padding="10dp"
                android:textColor="@color/my_buble_message"
                android:textColorHint="@color/black_alpha40" />

            <EditText
                android:id="@+id/editTextEmail"
                android:layout_width="300dp"
                android:layout_height="45dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/login_border_button"
                android:hint="  avenger@email.com"
                android:inputType="textEmailAddress"
                android:text="peter_parker@gmail.com"
                android:padding="10dp"
                android:textColor="@color/my_buble_message"
                android:textColorHint="@color/black_alpha40" />

            <!--        edit text with white border-->
            <EditText
                android:id="@+id/editTextPassword"
                android:layout_width="300dp"
                android:layout_height="45dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/login_border_button"
                android:hint="  your password"
                android:inputType="textPassword"
                android:padding="10dp"
                android:textColor="@color/my_buble_message"
                android:text="Password"
                android:textColorHint="@color/black_alpha40" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:gravity="center"
                android:orientation="vertical">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="cursive"
                    android:text="I was born"
                    android:textColor="@color/white"
                    android:textSize="30dp" />

                <DatePicker
                    android:id="@+id/datePicker"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="80dp"
                    android:calendarTextColor="@color/white"
                    android:calendarViewShown="false"
                    android:datePickerMode="spinner"
                    android:outlineAmbientShadowColor="@color/white"
                    android:spinnersShown="true" />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

    <LinearLayout
        android:id="@+id/bottomlayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/Amber"
        android:gravity="center"
        android:orientation="vertical">
        <!--        button with orange background-->
        <Button
            android:id="@+id/register"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:background="@drawable/login_border_button"
            android:backgroundTintMode="add"
            android:text="Sign Up"
            android:textColor="@color/white" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="By Tapping Register, You agree with our"
            android:textColor="@color/white"
            android:textSize="13sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:gravity="center"
            android:orientation="horizontal">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="Terms of Service"
                android:textColor="@color/white"
                android:textSize="13sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:gravity="center"
                android:text="and"
                android:textColor="@color/white"
                android:textSize="13sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="Privacy Policy"
                android:textColor="@color/white"
                android:textSize="13sp" />

        </LinearLayout>


    </LinearLayout>


</RelativeLayout>
